# mahou

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: autocompleter.rs  lib.rs  main.rs
src/downloader/: irc.rs  mod.rs
src/finder/: mod.rs  nibl.rs
