[package]
name = "mahou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
inquire = "0.6.1"
lazy_static = "1.4.0"
owo-colors = "3.5.0"
pbr = "1.1.1"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
