[package]
name = "mahou"
description = "Magically easy anime downloads"
authors = ["Leonardo Riether <riether.leonardo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LeoRiether/mahou"
keywords = ["anime", "cli", "xdcc"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
indicatif = "0.17"
inquire = "0.6"
lazy_static = "1.4.0"
owo-colors = "3.5.0"
rand = "0.8"
regex = "1.8"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
