[package]
name = "mahou"
description = "Magically easy anime downloads"
authors = ["Leonardo Riether <riether.leonardo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LeoRiether/mahou"
keywords = ["anime", "cli", "xdcc"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
dirs = "5.0.0"
indicatif = "0.17"
inquire = "0.6"
lazy_static = "1.4.0"
owo-colors = "3.5.0"
rand = "0.8"
regex = "1.8"
reqwest = { version = "0.11.17", features = ["blocking", "json", "rustls", "rustls-tls"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
